[gd_scene load_steps=3 format=3 uid="uid://rrl0pwjo7yr8"]

[ext_resource type="Script" path="res://test_gui/drink_preference_debug.gd" id="1_y7pc5"]

[sub_resource type="Theme" id="Theme_vcyt8"]

[node name="DrinkPreferenceDebug" type="VBoxContainer"]
script = ExtResource("1_y7pc5")

[node name="TemperatureTitleContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PropertyName" type="Label" parent="TemperatureTitleContainer"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Lauremimpsum"

[node name="LowerBound" type="SpinBox" parent="TemperatureTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="UpperBound" type="SpinBox" parent="TemperatureTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="SliderContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Slider" type="HSlider" parent="SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 85.15
max_value = 10.0
step = 0.1
tick_count = 11
ticks_on_borders = true

[node name="Value" type="Label" parent="SliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "00.0"

[connection signal="value_changed" from="TemperatureTitleContainer/LowerBound" to="." method="_on_lower_bound_value_changed"]
[connection signal="value_changed" from="TemperatureTitleContainer/UpperBound" to="." method="_on_upper_bound_value_changed"]
[connection signal="value_changed" from="SliderContainer/Slider" to="." method="_on_slider_value_changed"]
